--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-swiper": "^1.6.0"
+    "react-native-swiper": "^1.6.0",
+    "react-uuid": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
